WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286595
[iPad] scribd.com: Selection handles are missing after selecting text across multiple lines
https://bugs.webkit.org/show_bug.cgi?id=286595
Summary
[iPad] scribd.com: Selection handles are missing after selecting text across ...
Wenson Hsieh
Reported
2025-01-27 15:05:39 PST
e.g.
https://www.scribd.com/document/793537768/University-Physics-With-Modern-Physics-15th-Edition-textbook
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-27 15:06:04 PST
<
rdar://problem/143720155
>
Wenson Hsieh
Comment 2
2025-01-27 16:38:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39608
EWS
Comment 3
2025-01-28 07:51:26 PST
Committed
289453@main
(6355462b3a95): <
https://commits.webkit.org/289453@main
> Reviewed commits have been landed. Closing PR #39608 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug