[iPad] scribd.com: Selection handles are missing after selecting text across multiple lines https://bugs.webkit.org/show_bug.cgi?id=286595 rdar://143720155

Reviewed by Abrar Rahman Protyasha.

Make another adjustment to the "hidden selection" heuristic after 289369@main. In the case where:

-   There's a parent renderer that is out-of-flow, empty (zero width or zero height), and the
    nearest common ancestor of both selection endpoints.

-   The selection endpoints are both out-of-flow as well, but are visible (non-zero width and
    height).

…we'll currently (incorrectly) treat the selection as hidden. Mitigate this by relaxing the
conditions for this heuristic, such that _both_ selection endpoints must be hidden, in order for
this codepath to kick in.

This allows us to keep the native selection in iCloud Pages hidden (285925@main), but still show the
default selection highlight and handles in the case of Scribd.

* LayoutTests/editing/selection/ios/do-not-hide-selection-in-non-editable-visible-container-2-expected.txt: Added.
* LayoutTests/editing/selection/ios/do-not-hide-selection-in-non-editable-visible-container-2.html: Added.

Add another layout test to exercise this case.

* Source/WebCore/rendering/RenderObject.h:
* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::rendererIsTransparentOrFullyClipped):
(WebKit::WebPage::isTransparentOrFullyClipped const):
(WebKit::selectionIsTransparentOrFullyClipped):
(WebKit::WebPage::getPlatformEditorStateCommon const):
(WebKit::closestCommonContainerInRenderTree): Deleted.
* Source/WebKit/WebProcess/WebPage/WebPage.h:

Canonical link: https://commits.webkit.org/289453@main