Source/WebKit/WebProcess/WebPage/WebPage.h
@@ -205,7 +205,6 @@ class PrintContext;
 class Range;
 class RegistrableDomain;
 class RenderImage;
-class RenderObject;
 class Report;
 class ResourceRequest;
 class ResourceResponse;
@@ -876,7 +875,6 @@ public:
     void updateHeaderAndFooterLayersForDeviceScaleChange(float scaleFactor);
 
     bool isTransparentOrFullyClipped(const WebCore::Node&) const;
-    bool isTransparentOrFullyClipped(const WebCore::RenderObject&) const;
 #endif
 
     void didUpdateRendering();
